add features : auth controller
